tests/cases/compiler-development/artifact/ok/source-map-utf8.ari
fn main() -> i64 {
  let text = "cafe";
  let unicode = "한글";
  return 0;
}
