tests/cases/compiler-development/artifact/errors/syntax-recovery-missing-struct-close.ari
struct Broken {
  value: i64
fn after() -> i64 {
  return 5;
}
